$Id: ChangeLog,v 1.532 2009/03/05 21:27:21 freckle Exp $

2009-03-05  Matthias Ringwald <mringwal@inf.ethz.ch>
    * arch/unix/dev/ostimer.c: added return NULL to make compiler happy
    * arch/unix/os/thread.c:   fix function prototype for compiler
    
2009-02-28  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* boot/bootmon/arp.c: Added ARP responder

	* boot/bootmon/ether.c: Answer to incomming ARP requests 
	  (Fixes arp timeout bug when downloading large files)

	* boot/bootmon/bootmon.c, boot/bootmon/dialog.c,
	  boot/bootmon/dialog.h, boot/bootmon/tftp.c, boot/bootmon/utils.c,
	  boot/bootmon/utils.h: 
          Fixed compiler warnings (signedness)

2009-02-22  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* include/net/errno.h: 
	  Added a deprecated warning.
	  Commended out all defines and include include/errno.h instead.
	  All defines in this file are duplicates of the one defined in
          include/errno.h, just with an offset of 10000. We don't need these
	  defines and just get conflicts. So remove this file ASAP

	* include/net/netdebug.h, net/igmp.c, net/igmpin.c, net/tcpout.c,
	  net/tcpsm.c, net/tcpsock.c:
	  Include "include/errno.h" instead of "include/net/errno.h"

	* include/cfg/udp.h: Added empty header for "in sourcetree"
	  compilation

	* net/udpsock.c, include/sys/socket.h, include/sys/sock_var.h:
	  Added NutUdpError and NutUdpSetSocketError to set and retrieve
	  socket errors. As udp sockets aren't connection oriented those 
          errors will be anounced asynchronously on the next NutUdpSend 
	  or NutUdpReceive.

	  Include "include/errno.h" instead of "include/net/errno.h"

	* conf/net/net.nut:
	  Added NUT_UDP_ICMP_SUPPORT (ICMP support on UDP sockets)

	* net/icmpin.c: 
	  Added ICMP destination unreachable support for UDP sockets and 
	  give a more detailed errno to TCP sockets as well. ICMP support 
	  for UDP sockets will just be enabled when defining 
	  NUT_UDP_ICMP_SUPPORT int the configurator
